Fixed settings table column alignment

--- a/src/scss/layout/admin/settings/layout.scss
+++ b/src/scss/layout/admin/settings/layout.scss
@@ -80,7 +80,6 @@
   }
 
   .settings-content-table-rows {
-    display: block;
     height: auto;
     overflow-y: auto;
     max-height: 440px;
@@ -127,15 +126,12 @@
 }
 
 .settings-content-table-item {
-  padding: 5px;
   height: 56px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   padding: 12px 5px;
   cursor: default;
   box-shadow: none;
   font-size: 13px;
+  vertical-align: middle;
 
   &:hover {
     background-color: #fcfeff;
@@ -150,8 +146,10 @@
     font-weight: 500;
     white-space: nowrap;
     display: flex;
+    align-items: center;
     margin-left: 15px;
-    width: 200px;
+    min-width: 200px;
+    height: 56px;
 
     &.is-header .settings-content-table-item-label-content {
       font-weight: 600;
@@ -160,7 +158,7 @@
   }
 
   .settings-content-table-item-column {
-    width: 200px;
+    min-width: 200px;
     margin: 4px 0;
 
     &.is-desktop {
@@ -177,11 +175,11 @@
     }
 
     &.is-narrow {
-      width: 100px;
+      min-width: 100px;
     }
 
     &.is-long {
-      width: 400px;
+      min-width: 400px;
     }
 
     .form-group {
@@ -219,9 +217,8 @@
 
   .settings-content-table-item-actions {
     width: 37px;
-    display: flex;
-    justify-content: flex-end;
-    margin-left: auto;
+    text-align: right;
+    white-space: nowrap;
 
     &[data-colspan='5'] {
       width: 185px;
